...
        }
    var body: some View {
        VStack {
            HStack {
                Text("Short: ")
                TextField("", text: $newShortDescription)
                    .accessibilityLabel("editShortDescription")
                    .accessibilityValue(newShortDescription)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
            }
            HStack {
                Text("Long: ")
                TextField("", text: $newLongDescription)
                    .accessibilityLabel("editLongDescription")
                    .accessibilityValue(newLongDescription)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
            }
            Spacer()
        }
        .padding([.top, .leading, .trailing], 15.0)
        .navigationBarTitle("Edit Item", displayMode: .inline)
        .navigationBarBackButtonHidden(true)
        .toolbar {
            ToolbarItem(placement: .navigationBarLeading) {
                Button(action: {
                    presentationMode.wrappedValue.dismiss()
                }) {
...
