...
                    .onDelete { indexSet in
                        inventoryItems.remove(atOffsets: indexSet)
                    }
                }
            }
            .listStyle(GroupedListStyle())
            .navigationBarTitle("Inventory", displayMode: .inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    NavigationLink(destination: AddItemView(inventoryItems: $inventoryItems)) {
                        Text("Add")
                    }
                }
            }
        }
    }
}
...
